--- a/index.html
+++ b/index.html
@@ -43,20 +43,24 @@
 
       </div>
 
-      <div class="row">
+      <form id="miForm">
 
-        <select id="seleProductos" class="form-select w-25" aria-label="Default select example">
-          <option selected>Seleccione el Producto Deseado</option>
-        </select>
+        <div class="row">
 
-        <div class="form-floating col-1">
-          <input type="text" class="form-control" id="seleccion-cantidad">
-          <label for="floatingInput">Cantidad</label>
+          <select id="seleProductos" class="form-select w-25" aria-label="Default select example">
+            <option selected>Seleccione el Producto Deseado</option>
+          </select>
+
+          <div class="form-floating col-1">
+            <input type="text" class="form-control" id="seleccion-cantidad">
+            <label for="floatingInput">Cantidad</label>
+          </div>
+
+          <button id="btnClick-Selecionar" type="button" class="btn btn-primary col-2">Seleccionar</button>
+
         </div>
 
-        <button id="btnClick-Selecionar" type="button" class="btn btn-primary col-2">Seleccionar</button>
-
-      </div>
+      </form>
 
       <div class="listaDOM">
 
